fix: remove horizontal scroll

--- a/blocks/places/__link/places__link.css
+++ b/blocks/places/__link/places__link.css
@@ -3,6 +3,9 @@
     text-decoration: underline;
     text-underline-offset: 5px;
     transition: opacity .2s ease-in-out;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .places__link:hover {
