--- a/blocks/places/__paragraph-container/places__paragraph-container.css
+++ b/blocks/places/__paragraph-container/places__paragraph-container.css
@@ -1,5 +1,7 @@
 .places__paragraph-container {
     margin: 0;
+    padding: 0;
+    width: 95%;
 }
 
 @media screen and (max-width: 760px) {
