--- a/blocks/places/__url-title/places__url-title.css
+++ b/blocks/places/__url-title/places__url-title.css
@@ -1,8 +1,10 @@
 .places_url-title {
     margin: 0;
+    padding: 0;
     padding-bottom: 12px;
     color: #AAAAAA;
     font-size: 12px;
     line-height: 12px;
     font-weight: 400;
+    width: 100%;
 }
