--- a/blocks/places/__website/places__website.css
+++ b/blocks/places/__website/places__website.css
@@ -1,5 +1,8 @@
 .places__website {
     align-self: end;
+    width: 80%;
+    padding: 0;
+    margin: 0;
 }
 
 @media screen and (max-width: 760px) {
